--- a/PlotBewerten/plugin.yml
+++ b/PlotBewerten/plugin.yml
@@ -1,5 +1,5 @@
 name: PlotBewerten
-author: TrenicHD
+author: einfxchdarky
 main: einfxchdarky
 api: [3.0.0 , 4.0.0]
 description: ein Plot Bewerte System
